# user-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint-and-check.yml
src/: __init__.py  env.py
src/api/: apps.py
src/api/constants/: activity_types.py  messages.py  queues.py  signature_sources.py
src/api/controllers/: AuthController.py  PasswordResetController.py  UserController.py  UserKYCController.py  UserNOKController.py  WithdrawalAccountController.py
src/api/enums/: CharacterCasing.py
src/api/interfaces/: WalletServiceInterface.py
src/api/middlewares/: AppMiddleware.py  BrokerMiddleware.py  GateWayMiddleware.py
src/api/migrations/: 0001_initial.py  0002_otp.py
src/api/models/payload/requests/: AddWithdrawalAccountRequest.py  AuthenticateUserOtp.py  AuthenticateUserRequest.py  CreateUserRequest.py  CreateWalletRequest.py  PasswordResetRequest.py  Pin.py  ResendUserOtp.py  UpdateUserRequest.py  UserKYCRequest.py  UserNOKRequest.py
src/api/models/postgres/: Bank.py  Otp.py  StateLGA.py  User.py  UserKYCInformation.py  UserNextOfKin.py  UserWithdrawalInformation.py  Wallet.py  WalletLimit.py  __init__.py
src/api/repositories/: OtpRepository.py  PasswordResetRepository.py  UserKYCRepository.py  UserNOKRepository.py  UserRepository.py  UserWithdrawalInformationRepository.py  WalletLimitRepository.py  WalletRepository.py  _base.py
src/api/response/: error_handler.py  response_format.py
src/api/routes/: Auth.py  PasswordReset.py  User.py  UserKYC.py  UserNOK.py  WithdrawalAccount.py  __init__.py
src/api/services/: AuthService.py  OtpService.py  PasswordResetService.py  UserKYCService.py  UserNOKService.py  UserService.py  UtilityService.py  WalletService.py  WithdrawalAccountService.py
src/api/typing/: AccountSuccess.py  AuthSuccess.py  ExpireUUID.py  KYCInformaton.py  NOKSuccess.py  OTPSuccess.py  PasswordValidator.py  UserExists.py  UserSuccess.py  UserWallet.py
src/api/utils/: error_handlers.py  response_format.py
src/config/: apps.py  asgi.py  cors.py  env.py  logger.py  middleware.py  rest_framework.py  settings.py  templates.py  urls.py
src/config/caches/: __init__.py  redis.py
src/config/databases/: __init__.py  mongo.py  postgres.py  router.py
src/utils/: __init__.py  env.py
src/utils/env/: __init__.py  env.py
src/utils/logger/: Logger.py  LoggerInterface.py  __init__.py
src/utils/svcs/: __init__.py  context.py  middleware.py  registry.py  services.py
(+13 files in other folders)
